--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "be": "file:",
     "http": "^0.0.1-security",
+    "uuid": "^11.1.0",
     "ws": "^8.18.0",
     "zod": "^3.24.2"
   }
